# MeLi-Cosmos

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README-zh.md  README.md  manage.py  nginx.conf.reference  pyproject.toml  start.sh
blog/: admin.py  context_processors.py  feeds.py  forms.py  middleware.py  mixins.py  models.py  sitemaps.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_add_post_cover.py  0003_add_series.py  0004_invitecode_userprofile_category_author_memo_author_and_more.py  0005_populate_authors.py  0006_make_authors_non_null.py  0007_alter_post_status_uploadedimage.py  0008_userprofile_avatar_alter_userprofile_avatar_url.py  0009_viewlog.py  0010_comment_like.py  0011_userprofile_banned_at_userprofile_banned_by_and_more.py  0012_alter_post_options_and_more.py  0013_post_license.py  0014_notification.py  0015_comment_guest_and_moderation.py
dashboard/: urls.py  views.py
docs/: multi-user-refactoring-spec.md
my_cosmos/: asgi.py  settings.py  urls.py  wsgi.py
static/: robots.txt
static/css/: tailwind-input.css  tailwind.min.css
static/fonts/: fonts.css
templates/: 404.html  500.html
templates/blog/: about.html  archives.html  avatar_edit.html  ban_appeal.html  base.html  inbox.html  index.html  invite.html  landing.html  memo_detail.html  memo_form.html  memo_list.html  post_confirm_delete.html  post_detail.html  post_form.html  privacy.html  profile_edit.html  profile_setup.html  register.html  register_entry.html  rss_guide.html  series_detail.html  series_form.html  series_list.html  terms.html  user_space.html
(+22 files in other folders)
