[project]
name = "my-cosmos"
version = "2.0.0"
description = "MeLi Cosmos v2.0 - A minimalist Django personal blog with Zettelkasten philosophy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "gunicorn>=26.0.0",
    "markdown>=3.7",
    "nh3>=0.3.6",
    "pillow>=12.3.0",
    "pygments>=2.19",
    "python-dotenv>=1.2.2",
]
